# zendoo-cctp-lib

./: .gitignore  .travis.yml  AUTHORS  BUILD.md  Cargo.toml  README.md
.cargo/: audit.toml
cctp_primitives/: Cargo.toml
cctp_primitives/src/: lib.rs  type_mapping.rs  utils.rs
cctp_primitives/src/bit_vector/: compression.rs  merkle_tree.rs  mod.rs
cctp_primitives/src/commitment/: mod.rs  sidechain_tree.rs
cctp_primitives/src/commitment_tree/: hashers.rs  mod.rs  proofs.rs  sidechain_tree.rs  sidechain_tree_alive.rs  sidechain_tree_ceased.rs  utils.rs
cctp_primitives/src/proof_system/: batch.rs  coboundary_marlin.rs  final_darlin.rs  init.rs  mod.rs  type_mapping.rs
cctp_primitives/src/proving_system/: error.rs  init.rs  mod.rs
cctp_primitives/src/proving_system/verifier/: batch_verifier.rs  ceased_sidechain_withdrawal.rs  certificate.rs  mod.rs
cctp_primitives/src/utils/: commitment_tree.rs  data_structures.rs  debug.rs  mht.rs  mod.rs  poseidon_hash.rs  proof_system.rs  proof_system_utils.rs  proving_system.rs  serialization.rs  serialization_utils.rs
cctp_primitives/test/merkle_tree/: bvt_16x254_root.txt  bvt_32x254_root.txt  bvt_4x254_root.txt  bvt_64x254_root.txt  bvt_8x254_root.txt  random_bit_vector_root_hash.txt
cctp_primitives/test/strict_deser/: sample_final_darlin_proof  sample_final_darlin_vk
ci/: run_tests.sh  script.sh
ci/devtools/: run_locally.sh
ci/docker/: entrypoint.sh
ci/tests/: 001-cargo-build.sh  001-cargo-check.sh  003-cargo-test-nightly.sh
