[workspace]

members = ["cctp_primitives"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = "unwind"

# Uncomment these lines for local development pathsd

#[patch.'https://github.com/HorizenOfficial/ginger-lib.git']
#algebra = { path = '../ginger-lib/algebra' }
#primitives = { path = '../ginger-lib/primitives' }
