[workspace]

members = ["cctp_primitives"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = "unwind"

# Uncomment these lines for local development pathsd
#
# [patch.'https://github.com/HorizenOfficial/ginger-lib.git']
# algebra = { path = '../ginger-lib/algebra' }
# primitives = { path = '../ginger-lib/primitives' }
# bench-utils = { path = '../ginger-lib/bench-utils' }
# proof-systems = { path = '../ginger-lib/proof-systems' }
# r1cs-core = { path = '../ginger-lib/r1cs/core' }
# type-mappings = { path = '../ginger-lib/type-mappings'}

# [patch.'https://github.com/HorizenLabs/marlin.git']
# marlin = { path = '../marlin' }

# [patch.'https://github.com/HorizenLabs/poly-commit.git']
# poly-commit = { path = '../poly-commit' }
