[package]
name = "cctp_primitives"
version = "0.2.0"
authors = [
    "Alberto Benegiamo",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Paolo Tagliaferri <paolotagliaferri@horizenlabs.io>",
    "Andrii Nastenko <andrii.nastenko@iohk.io>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Alberto Sala <alsala@zensystem.io>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
    "Luca Giussani <lucagiussani@horizenlabs.io>"
]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "zend-516-remove-rust-toolchain", features = ["parallel", "tweedle", "derive"] }
primitives = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "zend-516-remove-rust-toolchain", features = ["merkle_tree", "tweedle"]}
proof-systems = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "zend-516-remove-rust-toolchain", features = ["darlin"]}

marlin = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "zend-516-remove-rust-toolchain" }
poly-commit = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "zend-516-remove-rust-toolchain" }

rand = { version = "=0.8.4" }
byteorder = "=1.4.3"
lazy_static = "=1.4.0"
blake2 = { version = "=0.8.1", default-features = false }
sha1 = "=0.6.0"
bit-vec = "=0.6.3"
bzip2 = { version = "=0.4.4", features = ["static"] }
flate2 = "=1.0.21"

[dev-dependencies]
serial_test = "=0.5.1"

[features]
asm = ["marlin/asm", "poly-commit/asm", "algebra/llvm_asm", "primitives/llvm_asm"]
