[package]
name = "cctp_primitives"
version = "0.2.1"
authors = [
    "Alberto Benegiamo",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Paolo Tagliaferri <paolotagliaferri@horizenlabs.io>",
    "Andrii Nastenko <andrii.nastenko@iohk.io>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Alberto Sala <alsala@zensystem.io>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
    "Luca Giussani <lucagiussani@horizenlabs.io>",
    "Michele d'Amico <mdamico@horizenlabs.io>",
]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", tag = "0.6.0", features = [
    "parallel",
    "tweedle",
    "derive",
] }
primitives = { git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0", features = [
    "merkle_tree",
    "tweedle",
] }
proof-systems = { git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0", features = [
    "darlin",
] }

marlin = { git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }
poly-commit = { git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.6.0" }

rand = { version = "0.8.4" }
byteorder = "1.4.3"
lazy_static = "1.4.0"
blake2 = { version = "0.8.1", default-features = false }
sha1 = "0.6.0"
bit-vec = "0.6.3"
bzip2 = { version = "0.4.4", features = ["static"] }
flate2 = "1.0.21"

[dev-dependencies]
serial_test = "0.5.1"

[features]
asm = ["marlin/asm", "poly-commit/asm", "algebra/asm", "primitives/asm"]
